27 August 2008: Wouter
	- daemon(3) is causing problems for people. Reverting the patch.
	  bug#200, and 199 and 203 contain sideline discussion on it.

26 August 2008: Wouter
	- test for insecure zone when DLV is in use, also does negative cache.
	- test for trustanchor when DLV is in use (the anchor works).
	- test for DLV used for a zone below a trustanchor.
	- added scrub filter for overreaching NSEC records and unit test.
	- iana portlist update
	- use of setresuid or setreuid when available.
	- use daemon(3) if available.

25 August 2008: Wouter
	- realclean patch from Robert Edmonds.

22 August 2008: Wouter
	- nicer debuglogging of DLV.
	- test with secure delegation inside the DLV repository.

21 August 2008: Wouter
	- negative cache code linked into validator, for DLV use.
	  negative cache works for DLV.
	- iana portlist update.
	- dlv-anchor option for unit tests.
	- fixup NSEC_AT_APEX classification for short typemaps.
	- ldns-testns has subdomain checks, for unit tests.

20 August 2008: Wouter
	- negative cache code, reviewed.

18 August 2008: Wouter
	- changes info: in logfile to notice: info: or debug: depending on 
	  the verbosity of the statements.  Better logfile message
	  classification.
	- bug #208: extra rc.d unbound flexibility for freebsd/nanobsd.

15 August 2008: Wouter
	- DLV nsec code fixed for better detection of closest existing 
	  enclosers from NSEC responses.
	- DLV works, straight to the dlv repository, so not for production.
	- Iana port update.

14 August 2008: Wouter
	- synthesize DLV messages from the rrset cache, like done for DS.

13 August 2008: Wouter
	- bug #203: nicer do-auto log message when user sets incompatible
	  options.
	- bug #204: variable name ameliorated in log.c.
	- bug #206: in iana_update, no egrep, but awk use.
	- ldns snapshot r2699 taken (includes DLV type).
	- DLV work, config file element, trust anchor read in.

12 August 2008: Wouter
	- finished adjusting testset to provide qtype NS answers.
