@@ -1,6 +1,8 @@
 27 August 2008: Wouter
 	- daemon(3) is causing problems for people. Reverting the patch.
 	  bug#200, and 199 and 203 contain sideline discussion on it.
+	- bug#199: pidfile can be outside chroot. openlog is done before
+	  chroot and drop permissions.
 
 26 August 2008: Wouter
 	- test for insecure zone when DLV is in use, also does negative cache.
